(fix) search ticket, chat pooling, addBtn(visible home page)

--- a/src/pages/profile/clientProfilePage/ClientProfilePage.module.scss
+++ b/src/pages/profile/clientProfilePage/ClientProfilePage.module.scss
@@ -16,6 +16,7 @@
   border-radius: 20px;
   padding: 40px;
   margin-bottom: 20px;
+  margin-top: 60px;
 }
 
 .profile_info_main {
@@ -55,6 +56,7 @@
   border-radius: 20px;
   padding: 40px;
   margin-bottom: 20px;
+  margin-top: 60px;
 }
 
 .reviews_section h2 {
@@ -174,6 +176,7 @@
   background: white;
   border-radius: 20px;
   padding: 40px;
+  margin-top: 60px;
 }
 
 .personal_data_section h2 {
