--- a/src/pages/сityPage/CityPage.module.scss
+++ b/src/pages/сityPage/CityPage.module.scss
@@ -194,7 +194,7 @@
 }
 
 .city_list_page {
-  min-height: 200px;
+  //min-height: 200px;
 }
 
 .loading, .no_cities {
